src/snapshots/antsi__parser__tests__empty_token.snap
---
source: src/parser.rs
description: "[fg:red]()"
---
[
    Styled {
        content: [],
        style: Style {
            foreground: Some(
                Red,
            ),
            background: None,
            decoration: None,
        },
    },
]
