src/snapshots/antsi__parser__tests__nested_token.snap
---
source: src/parser.rs
description: "[fg:red]([bg:blue](inner))"
---
[
    Styled {
        content: [
            Styled {
                content: [
                    Content(
                        "inner",
                    ),
                ],
                style: Style {
                    foreground: None,
                    background: Some(
                        Blue,
                    ),
                    decoration: None,
                },
            },
        ],
        style: Style {
            foreground: Some(
                Red,
            ),
            background: None,
            decoration: None,
        },
    },
]
