src/snapshots/antsi__parser__tests__parse_bad_escape_character@errors.snap
---
source: src/parser.rs
description: "before \\a after"
---
[
    ParseError {
        span: Some(
            7..9,
        ),
        at: EscapeCharacter,
        reason: UnknownEscapeSequence(
            'a',
        ),
    },
    ParseError {
        span: Some(
            7..9,
        ),
        at: EscapeCharacter,
        reason: Expected(
            [
                Eof,
            ],
        ),
    },
]
