src/snapshots/antsi__parser__tests__parse_bad_escape_character@result.snap
---
source: src/parser.rs
description: "before \\a after"
---
[
    Content(
        " after",
    ),
]
