src/snapshots/antsi__parser__tests__parse_bad_escape_character_in_token@errors.snap
---
source: src/parser.rs
description: "[fg:red](before \\a after)"
---
[
    ParseError {
        span: Some(
            16..18,
        ),
        at: EscapeCharacter,
        reason: UnknownEscapeSequence(
            'a',
        ),
    },
]
