src/snapshots/antsi__parser__tests__parse_bad_escape_character_in_token@result.snap
---
source: src/parser.rs
description: "[fg:red](before \\a after)"
---
[
    Content(
        " after",
    ),
]
