src/snapshots/antsi__parser__tests__parse_text.snap
---
source: src/parser.rs
expression: result
---
[
    Content(
        "this some text with wh ite\nspa\tce and numb3r5 and $ymb@l$ and CAPITALS",
    ),
]
