src/snapshots/antsi__parser__tests__parse_unescaped_close_parenthesis_in_plaintext@result.snap
---
source: src/parser.rs
description: before ) after
---
[
    Content(
        "before  after",
    ),
]
