src/snapshots/antsi__parser__tests__parse_unescaped_close_parenthesis_in_token@errors.snap
---
source: src/parser.rs
description: "[fg:red](before ) after)"
---
[
    ParseError {
        span: Some(
            23..24,
        ),
        at: ParenthesisClose,
        reason: UnescapedControlCharacter(
            ')',
        ),
    },
]
