src/snapshots/antsi__parser__tests__parse_unescaped_close_parenthesis_in_token@result.snap
---
source: src/parser.rs
description: "[fg:red](before ) after)"
---
[
    Styled {
        content: [
            Content(
                "before ",
            ),
        ],
        style: Style {
            foreground: Some(
                Red,
            ),
            background: None,
            decoration: None,
        },
    },
    Content(
        " after",
    ),
]
