src/snapshots/antsi__parser__tests__parse_unescaped_close_square_bracket_in_plaintext@errors.snap
---
source: src/parser.rs
description: "before ] after"
---
[
    ParseError {
        span: Some(
            7..8,
        ),
        at: SquareBracketClose,
        reason: UnescapedControlCharacter(
            ']',
        ),
    },
]
